advanced in proba stat week 13 and little change of organisation in quantum notes

--- a/quantum_inf_processing/main.tex
+++ b/quantum_inf_processing/main.tex
@@ -20,20 +20,7 @@ Prof. Nicolas Macris, Yihui Quek}
 \tableofcontents
 \newpage
 
-\section*{Introduction}
-\addcontentsline{toc}{section}{Introduction}
-These notes correspond to the course Introduction to Information Processing (COM-309).
-This document was written using LaTeX and Neovim. The overall structure and style are directly inspired by the notes of Arthur Herbette, with a few personal modifications. He also helped me significantly with my Neovim setup, for which I am grateful.
-
-\noindent Regarding note-taking methodology, I refer the reader to
-\url{https://castel.dev/post/lecture-notes-1/}
-, which provides an excellent and well-structured explanation of how to take effective lecture notes.
-
-\noindent The course is taught entirely on the blackboard. The content of this PDF therefore corresponds to what was written by the instructors on the board during the lectures, with minor reorganizations and clarifications when necessary. The material presented here originates from the lectures themselves and from the instructors’ explanations.
-
-\noindent Despite my efforts, errors or inaccuracies may remain. Readers are therefore encouraged to approach these notes with appropriate caution.
-\newpage
-
+\subfile{sections/intro.tex}
 \subfile{sections/section1.tex}
 \subfile{sections/section2.tex}
 \subfile{sections/section3.tex}
