--- a/quantum_inf_processing/mystyle.sty
+++ b/quantum_inf_processing/mystyle.sty
@@ -16,6 +16,12 @@
 \usepackage{amsmath}
 \tcbuselibrary{skins, breakable}
 
+\usepackage{tikz}
+\usepackage{varwidth} 
+
+\usetikzlibrary{decorations.pathmorphing}
+\usetikzlibrary{positioning}
+\usetikzlibrary{fit}
 \definecolor{vert}{HTML}{F3FBF3}    % Vert menthe pastel
 \definecolor{orange}{HTML}{FFF4EB}
 \definecolor{gris}{HTML}{FAFAFA}    % Gris clair doux
