add little correction

--- a/quantum_inf_processing/main.tex
+++ b/quantum_inf_processing/main.tex
@@ -2,7 +2,7 @@
 \usepackage{mystyle}
 
 \thispagestyle{fancy}
-\title{Notes of introduction to information processing}
+\title{Notes of introduction to quantum information processing}
 \author{Dario Marcone \\
 Prof. Nicolas Macris, Yihui Quek}
 \date{Saturday 08 november 2025}
