--- a/quantum_inf_processing/sections/section1.tex
+++ b/quantum_inf_processing/sections/section1.tex
@@ -46,7 +46,7 @@
                     
             \item \textbf{Matrices:}
                 \begin{itemize}[left=10pt, label=\textendash]
-                    \item Dagger: $A^{T, *} = A^{\dagger}, \mathspace \left(A\ket{\psi}\right)^{T, *}=\left(A\ket{\psi}\right)^{\dagger} = \left(\ket{\psi}\right)^{\dagger}A^{\dagger}=\ket{\psi}A^{\dagger}$.
+                    \item Dagger: $A^{T, *} = A^{\dagger}, \mathspace \left(A\ket{\psi}\right)^{T, *}=\left(A\ket{\psi}\right)^{\dagger} = \left(\ket{\psi}\right)^{\dagger}A^{\dagger}=\bra{\psi}A^{\dagger}$.
                     \item Notation: Let $\{\ket{v_1}, \ldots, \ket{v_3}\}$ an orthonormal basis and $A_{ij}=\bra{v_i}A\ket{v_j}$ ((i,j)th element of the matrice), then $A = \sum_{ i,j = 1 } ^{ d }A_{ij}\ket{v_i}\bra{v_j}$. 
                     \item Hermitian matrices: $A^{\dagger}=A$ (self-adjoint), i.e. $\begin{pmatrix} 1 & i  \\ -i &  0 \end{pmatrix}$. 
                     \item Unitary matrices: $U^{\dagger}U=UU^{\dagger}=\mathbbm{1}, \mathspace U^{\dagger}=U^{-1}$, with properties:
