corrections of languages error

--- a/quantum_inf_processing/sections/section3.tex
+++ b/quantum_inf_processing/sections/section3.tex
@@ -7,7 +7,7 @@
            \item \textbf{Beam splitter:} $U = \frac{1}{\sqrt{2}}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix} \left(\text{ Hadamard matrix}\right)$.
            \item \textbf{State after the beam splitter: }$U\ket{H}= \frac{1}{\sqrt{2}}\left(\ket{H}+\ket{V}\right)$. \begin{remark}{Remark}
                    \begin{tcolorbox}[gris]
-                        It's a very srange state that is at the same time horizontal and vertical. If it wasn't a qubit, it would either be completely reflected or it would go through. 
+                        It's a very strange state that is at the same time horizontal and vertical. If it wasn't a qubit, it would either be completely reflected or it would go through. 
                    \end{tcolorbox}
            \end{remark}
        \item \textbf{Perfect mirror: } $R = \begin{pmatrix} 0 & 1 \\ 1 & 0 \end{pmatrix}, \mathspace RR^{\dagger}=R^{\dagger}R=1 \left(\text{\important{important condition!}}\right), \mathspace R^{\dagger}=R \left(\text{coincidence}\right)$.
