--- a/quantum_inf_processing/sections/section6.tex
+++ b/quantum_inf_processing/sections/section6.tex
@@ -46,7 +46,7 @@
     \end{center}
     There is four possible measure settings for A and B: $1=\left(\alpha, \beta\right), 2=\left(\alpha', \beta\right), 3=\left(\alpha, \beta'\right), 4=\left(\alpha', \beta'\right)$.
 
-    A and B meet or communcate classically and compute so-called correlation coefficient: 
+    A and B meet or communicate classically and compute so-called correlation coefficient: 
     \[X_{exp}=\frac{1}{N_1}\sum_{ i_1 }a_i_1b_i_1+\frac{1}{N_2}\sum_{ i_2 }a_i_2'b_i_2+\frac{1}{N_3}\sum_{ i_3 }a_i_3b_i_3'+\frac{1}{N_4}\sum_{ i_4 }a_i_4'b_i_4'\]
     \noindent\textbf{Classical prediction $\left(X_{\text{class. th}}\right)$: }
     
