--- a/quantum_inf_processing/sections/section7.tex
+++ b/quantum_inf_processing/sections/section7.tex
@@ -38,7 +38,7 @@
        \begin{theoreme}
            \begin{enumerate}[left=10pt]
                \item A density matrix satisfies $\rho^{\dagger}=\rho, \mathspace \rho \geq 0, \mathspace Tr\rho=1$.
-               \item Vice-versa any matrix satisfying these 3 proposition is a density matrix.
+               \item Vice-versa any matrix satisfying these 3 propositions is a density matrix.
            \end{enumerate}
        \end{theoreme}
     \subsection{Partial trace}
@@ -48,7 +48,7 @@
 
         \begin{remark}{Remark}
             \begin{tcolorbox}[gris]
-                You can vizualize this by thinking that M like a big matrice of size $\left(dim\mathcal{H}_1 dim\mathcal{H}_2\right) \cdot \left(dim\mathcal{H}_1 dim\mathcal{H}_2\right)$ and that the partial trace correspond to slice this matrice in blocs corresponding to $\mathcal{H}_1$ and compute the trace on these blocs.
+                You can vizualize this by thinking that M is like a big matrice of size $\left(dim\mathcal{H}_1 dim\mathcal{H}_2\right) \cdot \left(dim\mathcal{H}_1 dim\mathcal{H}_2\right)$ and that the partial trace correspond to slice this matrice in blocs corresponding to $\mathcal{H}_1$ and compute the trace on these blocs.
             \end{tcolorbox}
         \end{remark}
         \textbf{Properties:}
@@ -65,7 +65,7 @@
         When you have a non-isolated system S, it means that the system interact with an environement E, and $\ket{\psi} \in \mathcal{H}_S \otimes \mathcal{H}_E, \mathspace \rho_{S\cup E}=\ket{\psi}\bra{\psi}$.
         Then to compute the state of the sub-system S, you have to compute 
         \[\rho_S=Tr_E\ket{\psi}\bra{\psi}.\]
-        Therefore, the general state of a non-isolated systemn is a density matrix!
+        Therefore, the general state of a non-isolated system is a density matrix!
 
         \noindent\textbf{Computation:}
         \begin{enumerate}[left=10pt]
@@ -74,7 +74,7 @@
         \end{enumerate}
         \textbf{Properties:}
         \begin{itemize}[left=10pt, label=\textbullet]
-            \item If $M=A \otimes B$ thne $M_B = Tr\left(A\right)\cdot B$, 
+            \item If $M=A \otimes B$ then $M_B = Tr\left(A\right)\cdot B$, 
             \item If $M$ a density matrix $= \rho_A \otimes \rho_B$ then $M_B= \underbrace{Tr\left(\rho_A\right)}_{=1}\rho_B=\rho_B$.
         \end{itemize}
 
