--- a/quantum_inf_processing/sections/section9.tex
+++ b/quantum_inf_processing/sections/section9.tex
@@ -50,7 +50,7 @@
                 \item \textbf{$R_{\theta}$ = Phase rotation:}
                     \[R_{\theta}=\begin{pmatrix} e^{-i\theta} & 0 \\ 0 & e^{i\theta} \end{pmatrix} .\]
         \end{itemize}
-        \textbf{How des quantum error correction differ form classical error correction:}
+        \textbf{How quantum error correction differ form classical error correction:}
         \begin{itemize}[left=10pt, label=\textbullet]
             \item  The no-cloning theorem forbids copying information. 
             \item We can't look at quantum states and figure out which copy is wrong.
